// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package autofill;

message AutofillSamplingRate {
  // A sampling rate per origin based on origin popularity is applied to
  // Autofill UKM metrics recording.
  optional int32 sampling_rate = 1;
}
